--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,96 +1,3 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <title>爱编程,极限飞盘,中国文化！专注于Java后端！</title>
-
-        <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="https://github.com/ILovT/ilovt.github.io/assets/img/favicon.ico" />
-
-        <!-- Come and get me RSS readers -->
-        <link rel="alternate" type="application/rss+xml" title="ILovT" href="https://github.com/ILovT/ilovt.github.io/feed.xml">
-        
-        <!-- Stylesheet -->
-        <link rel="stylesheet" href="https://github.com/ILovT/ilovt.github.io/assets/css/style.css">
-        <!--[if IE 8]><link rel="stylesheet" href="https://github.com/ILovT/ilovt.github.io/assets/css/ie.css"><![endif]-->
-
-        <!-- Modernizr -->
-        <script src="https://github.com/ILovT/ilovt.github.io/assets/js/modernizr.custom.15390.js" type="text/javascript"></script>
-        <!-- 
-
-        <script>
-        (function() {
-          var cx = '016632428220504757728:jgoloxeu1vm';
-          var gcse = document.createElement('script');
-          gcse.type = 'text/javascript';
-          gcse.async = true;
-          gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-              '//www.google.com/cse/cse.js?cx=' + cx;
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(gcse, s);
-        })();
-      </script>
-      <gcse:search></gcse:search>
-      -->
-        
-    </head>
- 
-    <body>
-        <div class="header">
-            <div class="container">
-                <h1 class="logo"><a href="https://github.com/ILovT/ilovt.github.io">ILovT</a></h1>
-                <nav class="nav-collapse">
-                    <ul class="noList">
-                    
-                        <li class="element first current ">
-                            <a href="https://github.com/ILovT/ilovt.github.io/index.html">Home</a>
-                        </li> 
-                    
-                        <li class="element   ">
-                            <a href="https://github.com/ILovT/ilovt.github.io/about">About</a>
-                        </li> 
-                    
-                        <li class="element   last">
-                            <a href="https://github.com/ILovT/ilovt.github.io/contact">Contact</a>
-                        </li> 
-                    
-                        <li> <a href="https://github.com/ILovT/ilovt.github.io" target="_blank">GitHub</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div><!-- end .header -->
-        
-            
-
-
-	<div class="content">
-		<div class="container">
-			      <div id="home">
-        <h1 class="pageTitle">Recent Posts</h1>
-        <ul class="posts noList">
-          
-            <li>
-            	<span class="date">March 26, 2015</span>
-            	<h3><a href="https://github.com/ILovT/ilovt.github.io/blog/test/">Contact Long Haul</a></h3>
-            	<p class="description">  Contact Me      This is an example Contact page. If you want to make changes then do so in the contact.html file.    The form is provided by Formspree. Follow the directions on their site to set up the form for use.    If you have questions abou...</p>
-            </li>
-          
-        </ul>
-        <!-- Pagination links -->
-        <div class="pagination">
-           
-          
-        </div>
-      </div>
-		</div>
-	</div><!-- end .content -->
-
           <div class="footer">
             <div class="container">
               <p class="copy">&copy; 2014 <a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
@@ -124,10 +31,10 @@
 
           <!-- Add jQuery and other scripts -->
           <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-          <script>window.jQuery || document.write('<script src="https://github.com/ILovT/ilovt.github.io/assets/js/jquery-1.11.2.min.js"><\/script>')</script>
-          <script src='https://github.com/ILovT/ilovt.github.io/assets/js/dropcap.min.js'></script>
-          <script src='https://github.com/ILovT/ilovt.github.io/assets/js/responsive-nav.min.js'></script>
-          <script src='https://github.com/ILovT/ilovt.github.io/assets/js/scripts.js'></script>
+          <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/jquery-1.11.2.min.js"><\/script>')</script>
+          <script src='{{ site.url }}/assets/js/dropcap.min.js'></script>
+          <script src='{{ site.url }}/assets/js/responsive-nav.min.js'></script>
+          <script src='{{ site.url }}/assets/js/scripts.js'></script>
 
           <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
@@ -143,5 +50,3 @@
 
     </body>
 </html>
-
-
