--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -170,7 +170,7 @@ HEADER STYLING
 .header {
 	background-color: seagreen;
 	background-image: url('../img/touring.jpg');
-	background-size: cover; 
+	background-size: 1244px 420px;
 	background-position: center center;
 	color: white;
 	padding: 0;
