modify margin-left and width

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="post" style="
+    width: 1117px;
+    margin-left: -3cm;
+">
 	{% if page.image %}
 		<div class="featuredImage">
 	  		<img src="{{ site.url }}/assets/img/{{ page.image }}" alt="" />
