--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,7 @@
 ---
 layout: default
 ---
-<div class="post" style="
-    width: 1117px;
-    margin-left: -3cm;
-">
+<div class="post wideMore">
 	{% if page.image %}
 		<div class="featuredImage">
 	  		<img src="{{ site.url }}/assets/img/{{ page.image }}" alt="" />
