modify site name

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
                             <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
                         </li> 
                     {% endfor %}
-                        <li> <a href="https://github.com/ILovT/ilovt.github.io" target="_blank">GitHub</a></li>
+                        <li> <a href="https://github.com/ILovT/chnan.github.io" target="_blank">GitHub</a></li>
                     </ul>
                 </nav>
             </div>
